[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
#异步运行
monoio = "0.2.4"
#使用linux socket套接字

socket2 = { version = "0.6.3" , features = ["all"]}
#错误处理
anyhow = "1.0.102"

#日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
# 字节
bytes = "1"
# 高性能查找算法
memchr = "2"
# 数字转字节
itoa = "1.0"

#redis glob风格匹配
fast-glob = "1.0.1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
