[package]
name = "mini-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
#异步运行
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = {version = "0.1.18", features = ["sync"]}
rayon = "1.11.0"
#错误处理
anyhow = "1.0.102"

#日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
# 字节
bytes = { version = "1", features = ["serde"] }
# 高性能查找算法
memchr = "2"
# 数字转字节
itoa = "1.0"
atoi = "2.0.0"

lexical-core = "1.0.6"
# 时间处理
chrono = "0.4"

#redis glob风格匹配
fast-glob = "1.0.1"
# 线程安全的map, 类似java的ConcurrentHashMap 采用分段锁
dashmap = "6.1.0"
ahash = "0.8.12"
smallvec = "1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

tikv-jemallocator = "0.6"
num_cpus = "1.16"
rand = "0.10.1"


[profile.release]
opt-level = 3
lto = "thin"       # 链接时优化
codegen-units = 1  # 更好的优化，编译慢但运行快
debug = 1          # 保留函数名，火焰图需要
